# memoir-cloud

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: Dockerfile  README.md  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: health.py  photos.py  telemetry.py
backend/app/services/: blob_service.py  cache_service.py  geoip_service.py  telemetry_service.py
backend/tests/: test_api.py
docs/: SPEC.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: staticwebapp.config.json
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Header.tsx  InfiniteScrollTrigger.tsx  Lightbox.tsx  LoadingSkeleton.tsx  PhotoGrid.tsx  QuarterSection.tsx  ThemeToggle.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/pages/: Gallery.tsx
frontend/src/services/: api.ts  telemetry.ts
frontend/src/types/: index.ts
infra/: main.bicep  main.json
infra/modules/: acr.bicep  containerapp-env.bicep  containerapp.bicep  insights.bicep  loganalytics.bicep  staticwebapp.bicep  storage.bicep
infra/parameters/: prod.bicepparam
uploader/: README.md  pyproject.toml
uploader/memoir_uploader/: __init__.py  cli.py  config.py  converter.py  deleter.py  exif.py  thumbnail.py  uploader.py  viewer.py
